Add idempotent TBA publishing jobs
